modified add to list

--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
-REACT_APP_apiKey: 'AIzaSyC6Eqavfn3atWNOP0ATJ3hEo0IAdxsAO88',
+REACT_APP_reaapiKey: 'AIzaSyC6Eqavfn3atWNOP0ATJ3hEo0IAdxsAO88',
 REACT_APP_authDomain: 'todoconnection.firebaseapp.com',
 REACT_APP_databaseURL: 'https://todoconnection-default-rtdb.firebaseio.com',
 REACT_APP_projectId: 'todoconnection',
