--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "tsconfig-paths": "^4.2.0"
   }
 }
